syntax = "proto3";

option go_package = "auth-service/proto;proto";

service AuthService {
  rpc GetUserProfile (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string name = 1;
  string email = 2;
  string avatar_url = 3;
}